tests/NormalTests/paczka1/fuzzy1/65531573.err
Error in line 14: F5XP S201 420,0
Error in line 17: SQRCJrhR A143 95,1
Error in line 19: F5XP A42 447,4
